--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,6 +20,9 @@ dev_dependencies:
   animated_widgets:
     path: ../
 
+  rxdart: ^0.22.0
+  bloc_provider: ^0.6.2+1
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
